<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.HomeFragment"
    android:paddingBottom="?actionBarSize">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_normal">

        <TextView
            android:id="@+id/tv_day"
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            tools:text="Today, Tuesday" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/Title.Second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            tools:text="26 April, 2020" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@drawable/bg_rounded"
            android:padding="@dimen/padding_normal">

            <TextView
                android:id="@+id/title"
                style="@style/Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fasting_time"
                android:textColor="@color/green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:src="@drawable/ic_sunrise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/tv_sunrise_time"
                style="@style/BoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_medium"
                app:layout_constraintStart_toEndOf="@id/img_sunrise"
                app:layout_constraintTop_toTopOf="@id/img_sunrise"
                tools:text="04:40" />

            <TextView
                style="@style/Description.Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suhur"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="@id/tv_sunrise_time"
                app:layout_constraintTop_toBottomOf="@id/tv_sunrise_time" />

            <ImageView
                android:id="@+id/img_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/padding_medium"
                android:src="@drawable/ic_sunrise"
                app:layout_constraintBottom_toBottomOf="@id/img_sunrise"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/img_sunrise" />

            <TextView
                android:id="@+id/tv_sunset_time"
                style="@style/BoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                app:layout_constraintStart_toEndOf="@id/img_sunset"
                app:layout_constraintTop_toTopOf="@id/img_sunset"
                tools:text="04:40" />

            <TextView
                android:id="@+id/suhur_description"
                style="@style/Description.Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="5"
                android:text="@string/iftar"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="@id/tv_sunset_time"
                app:layout_constraintTop_toBottomOf="@id/tv_sunset_time" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/bg_rounded"
            android:padding="@dimen/padding_normal">

            <TextView
                android:id="@+id/title_notif"
                style="@style/Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fasting_notifications"
                android:textColor="@color/green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_sunrise_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:src="@drawable/ic_sunrise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_notif" />

            <TextView
                android:id="@+id/tv_sunrise_time_2"
                style="@style/BoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_medium"
                app:layout_constraintStart_toEndOf="@id/img_sunrise_2"
                app:layout_constraintTop_toTopOf="@id/img_sunrise_2"
                tools:text="04:40" />

            <TextView
                style="@style/Description.Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wake_up"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="@id/tv_sunrise_time_2"
                app:layout_constraintTop_toBottomOf="@id/tv_sunrise_time_2" />

            <ImageView
                android:id="@+id/img_sunset_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_medium"
                android:src="@drawable/ic_sunrise"
                app:layout_constraintBottom_toBottomOf="@id/img_sunrise_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/img_sunrise_2" />

            <TextView
                android:id="@+id/tv_sunset_time_2"
                style="@style/BoldText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                app:layout_constraintStart_toEndOf="@id/img_sunset_2"
                app:layout_constraintTop_toTopOf="@id/img_sunset_2"
                tools:text="04:40" />

            <TextView
                android:id="@+id/eat_description"
                style="@style/Description.Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prepare_to_eat"
                android:textSize="@dimen/text_medium"
                app:layout_constraintStart_toStartOf="@id/tv_sunset_time_2"
                app:layout_constraintTop_toBottomOf="@id/tv_sunset_time_2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_large"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_gridlayout" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>